tests/fetch_changelog/snapshots/r#mod__fetch_changelog__fetch_changelog@releases.yml.snap
---
source: tests/fetch_changelog/mod.rs
expression: input
input_file: tests/test-result/.tmp0XCMGv/releases.yml
---
product_name: OpenTalk
releases_page_header: |
  ## Release Announcements
series:
  '24.8':
    end_of_life: 2024-09-19
    releases:
      24.8.0:
        date: 2024-07-19
        components:
          controller: 0.16.0
components:
  controller:
    name: OpenTalk Controller Community Edition
    category: services
    releases:
      0.16.0: {}
component_categories:
  services:
    name: Services
